--- a/trac/htdocs/css/search.css
+++ b/trac/htdocs/css/search.css
@@ -12,3 +12,9 @@
 #content.search #results .author, #results .date { color: #090; }
 
 #content.search #quickjump { font-style: italic; font-weight: bold; }
+
+#content.search form fieldset { margin: 1em 0 0; font-size: 90%; 
+                                background-color: transparent; 
+                                box-shadow: none; }
+#content.search form fieldset input { font-size: 90%; }
+#content.search form fieldset label { font-size: 90%; margin-right: 0.1em; }
